SPY: fix spacing on hero desktop

--- a/app/(site)/component/message/message.scss
+++ b/app/(site)/component/message/message.scss
@@ -13,7 +13,7 @@
   padding: 0 utils.bu(2.5) utils.bu(4.5);
 
   @include mixins.breakpoint(lg) {
-    padding: utils.bu(20) 0 0;
+    padding: utils.bu(14) 0 0;
   }
 
   &__content {
@@ -57,8 +57,8 @@
     }
 
     @include mixins.breakpoint(lg) {
-      margin-top: utils.bu(20);
-      padding: 0 0 utils.bu(11);
+      margin-top: utils.bu(8);
+      padding: 0 0 utils.bu(6.5);
 
       > svg {
         max-width: 658px;
